Fix #53342: Add --enable-native-access=ALL-UNNAMED to dev mode JVM args
Jansi is used for terminal/console support in dev mode and calls
System.load to load native libraries. On JDK 22+, this triggers
warnings about restricted method usage unless native access is enabled.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>